Added source-to-image homebrew package.

--- a/play-books/homebrew.yml
+++ b/play-books/homebrew.yml
@@ -20,6 +20,8 @@
       options: ""
     - name: "php@{{ php_version }}"
       options: ""
+    - name: "source-to-image"
+      options: ""
     - name: wget
       options: ""
 
