--- a/setup.yml
+++ b/setup.yml
@@ -60,7 +60,7 @@
         - grunt
         - gulp
         - selenium-webdriver
-        - chromedirver
+        - chromedriver
 
   post_tasks:
     - name: "Update Local Configuration Files"
